--- a/pro14/WebContent/test03/ajax1.html
+++ b/pro14/WebContent/test03/ajax1.html
@@ -16,14 +16,14 @@
 				type : "get",		// 서버페이지로 요청하는 방식(get 또는 post)
 				datatype : "text",	// 서버페이지로부터 응답받을 데이터 형식
 				async : false,		// 서버페이지로 요청시 false인 경우 동기식으로 처리한다는 의미
-				url : "http://localhost:8080/pro14/ajaxTest1",	// 요청할 서버페이지의 주소값
-				data : {param : "Hello, jQuery"},	// 서버페이지로 요청할 데이터 지정 (매개변수와 값을 설정))
+				url : "http://localhost:8080/pro14/ajaxTest1",	// 요청할 서버페이지의 주소값	//ajaxTest1은 서블릿 맵핑주소값
 				success : function(data,textStatus) { 	//서버에 요청통신에 성공했을 때...
 														//서버페이지로부터 데이터를 매개변수로 응답받아 처리
 														
 							//서버페이지로부터 응답받은 메세지를 아래의 <div>영역에 텍스토 출력
 							$('#message').append(data);
 				},
+				data : {param : "Hello, jQuery"},	// 서버페이지로 요청할 데이터 지정 (매개변수와 값을 설정))
 				error : function() {	//서버페이지로 요청과 응답에 실패했을 때 호출되는 콜백함수
 							alert("에러가 발생했습니다");
 				},
